--- a/public/facerec.html
+++ b/public/facerec.html
@@ -8,7 +8,7 @@
 
 <head>
     <link href="assets/css/style-face.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/Newstyle.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="assets/css/Newstyle.css" rel="stylesheet" type="text/css" /> -->
     <script src="https://webrtc.github.io/adapter/adapter-5.0.4.js" type="text/javascript"></script>
     <script >
         function alertbar() {
@@ -20,7 +20,7 @@
 
 <body onload="alertbar()"; bgcolor="#E6E6FA">
     <div>
-        <input type="submit" id="startAndStop" class="button" style="display:none" />
+        <input type="submit" id="startAndStop" class="button" style="visibility:hidden" />
     </div>
     <div>
         <div class="row">
